Add the 42 missing commands + add/update utils